# hugging-face-demo

./: .gitignore  Deploy.README.md  README.md  Untitled  app 2.py  app.py  biomedical_relationship_demo.ipynb  cli.py  cli2.py  cross_evaluator.py  docs.py  evaluator.py  evaluator2.py  features.py  generator.py  io.py  neo4j_loader.py  node_relation.py  pyproject.toml  reporting.py  requirements.txt  rule_builder.py  schema.py  schema_builder.py  util.py  viz.py
data/: file.json  human_relevance.json  sample.json
data_files/: GLIOMA01-records.json  diagnosis.json  environment.txt  human_relevance.json  study.json
feature/: __init__.py  base.py  bio_term_overlap.py  categorical.py  cluster.py  contextual_relation_engine.py  doc_alignment.py  fuzzy.py  model_wrapper.py  prompt.py  semantic.py  substring.py  textual.py
graph/: DFS.py
static/: styles.css  table.js
